Fixing background color being too light

--- a/less/sudoku.less
+++ b/less/sudoku.less
@@ -24,7 +24,7 @@
                 }
             }
             .quadrant1, .quadrant3, .quadrant5, .quadrant7, .quadrant9 {
-                background-color: lightgrey;
+                background-color: darkgray;
             }
         }
     }
